[metadata]
name = zoho-jmishler
version = attr: zoho.__version__
author = Jonathan Mishler
author_email = jonathan.mishler@gmail.com
description = A package to access Zoho Applications api
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    httpx
python_requires = >=3.6